<resources>
    <string name="app_name">moon366</string>
    <string name="title">Do you wanna know the weather in Minsk?</string>
    <string name="title2">I know that you do...</string>
    <string name="find_out">Find out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc">Description:</string>
    <string name="wind">Wind:</string>
    <string name="feels">Feels like:</string>
    <string name="temp">Temperature:</string>
</resources>