<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="33sp" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:fontFamily="cursive"
        android:text="@string/title2"
        android:textAlignment="center"
        android:textSize="29sp" />

    <TextView
        android:id="@+id/temperature"
        style="@style/parameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:fontFamily="sans-serif"
        tools:text="@string/temp" />

    <TextView
        android:id="@+id/feels"
        style="@style/parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        tools:text="@string/feels" />

    <TextView
        android:id="@+id/wind"
        style="@style/parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        tools:text="@string/wind" />

    <TextView
        android:id="@+id/description"
        style="@style/parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13sp"
        tools:text="@string/desc" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="140sp"
        android:layout_marginTop="100sp"
        android:text="@string/find_out"
        app:cornerRadius="60sp" />
</LinearLayout>